--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -406,7 +406,8 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "إعادة إرسال التعليق";
 
-/* Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input.
+   Text displayed in gray inside of the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "إضافة تعليق";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
