--- a/Halloapp/de.lproj/Localizable.stringsdict
+++ b/Halloapp/de.lproj/Localizable.stringsdict
@@ -116,6 +116,22 @@
 			<string>Keine Mitglieder</string>
 		</dict>
 	</dict>
+	<key>group.grid.n.posts</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@Anzahl@</string>
+		<key>count</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d neuer Beitrag</string>
+			<key>other</key>
+			<string>%d neue Beiträge</string>
+		</dict>
+	</dict>
 	<key>media.prepare.failed.n.count</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
