--- a/Halloapp/pt-br.lproj/Localizable.stringsdict
+++ b/Halloapp/pt-br.lproj/Localizable.stringsdict
@@ -170,6 +170,30 @@
 			<string>Nenhum membro</string>
 		</dict>
 	</dict>
+	<key>group.grid.n.posts</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@count@</string>
+		<key>count</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d new posts</string>
+			<key>many</key>
+			<string>%d new posts</string>
+			<key>one</key>
+			<string>%d new post</string>
+			<key>other</key>
+			<string>%d new posts</string>
+			<key>two</key>
+			<string>%d new posts</string>
+			<key>zero</key>
+			<string>%d new posts</string>
+		</dict>
+	</dict>
 	<key>media.prepare.failed.n.count</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
