--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -406,7 +406,8 @@
 /* Confirmation prompt for when resending comment that previously failed to send. */
 "comment.resend.confirmation" = "Yorum tekrar gönderilsin mi?";
 
-/* Text displayed in gray inside of the comment input field when there is no user input. */
+/* Placeholder text for the comment input field when there is no user input.
+   Text displayed in gray inside of the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Yorum ekle";
 
 /* Header that appears above all the unread Messages in the comments view when there are more than one unread message */
